#51 Add support for periodic report mappings in ReportMappings.